<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/NikitaLavender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/MainAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/app_name_formatted"
            android:textAlignment="center"

            android:textColor="@color/Light"
            android:textSize="21"
            android:textStyle="bold" />
    </com.google.android.material.navigation.NavigationView>

    <TextView
        android:id="@+id/emailOrUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/email_or_username_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationView" />

    <EditText
        android:id="@+id/inputUsernameOrEmailLabel"
        android:layout_width="347"
        android:layout_height="48"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailOrUsernameLabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/password_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsernameOrEmailLabel" />

    <EditText
        android:id="@+id/inputPasswordLabel"
        android:layout_width="347"
        android:layout_height="48"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailOrUsernameLabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="159dp"
        android:text="@string/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordLabel" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/registerOptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_option"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/registerOptionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/register_button"
            app:iconPadding="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>