<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewScore">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/NikitaLavender"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/MainAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/app_name_formatted"
            android:textAlignment="center"

            android:textColor="@color/Light"
            android:textSize="21sp"
            android:textStyle="bold" />
    </com.google.android.material.navigation.NavigationView>

    <TextView
        android:id="@+id/submitNewScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="145dp"
        android:text="@string/submit_new_score_indicator"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationView" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitNewScoreLabel">

        <EditText
            android:id="@+id/inputNewScore"
            android:layout_width="283dp"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/new_score_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/registerOptionButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="0dp"
            app:iconPadding="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>